<resources>
    <string name="app_name">地球Online</string>

    <!-- v1.0.0：桌面小组件 -->
    <string name="widget_overview_desc">显示等级、经验与任务 / 背包 / 成就 / 数据入口</string>
    <string name="widget_default_name">旅行者</string>
    <string name="widget_avatar_desc">头像</string>
    <string name="widget_entry_tasks">任务</string>
    <string name="widget_entry_backpack">背包</string>
    <string name="widget_entry_achievements">成就</string>
    <string name="widget_entry_data">数据</string>
</resources>
